--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
-        "target": "es6",
+        "experimentalDecorators": true,
+        "target": "es2017",
         "module": "commonjs",
         "moduleResolution": "node"
     },
