--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@types/file-saver": "^2.0.1",
     "@types/jquery": "^3.5.5",
     "@types/jszip": "^3.4.1",
-    "babylonjs": "^4.1.0",
+    "babylonjs": "^4.2.0",
     "babylonjs-gui": "^4.1.0",
     "babylonjs-loaders": "^4.1.0",
     "babylonjs-materials": "^4.1.0",
@@ -32,6 +32,7 @@
     "file-saver": "^2.0.5",
     "jquery": "^3.6.0",
     "jszip": "^3.6.0",
+    "ts-keycode-enum": "^1.0.6",
     "webpack-merge": "^4.2.2"
   }
 }
