--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "devDependencies": {
     "copy-webpack-plugin": "^6.0.1",
     "ts-loader": "^7.0.5",
-    "typescript": "^3.9.3",
+    "typescript": "^3.9.9",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
@@ -21,8 +21,12 @@
   },
   "dependencies": {
     "@types/file-saver": "^2.0.1",
+    "@types/jest": "^26.0.20",
     "@types/jquery": "^3.5.5",
     "@types/jszip": "^3.4.1",
+    "@types/node": "^14.14.32",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.2",
     "babylonjs": "^4.2.0",
     "babylonjs-gui": "^4.2.0",
     "babylonjs-loaders": "^4.1.0",
@@ -32,6 +36,8 @@
     "file-saver": "^2.0.5",
     "jquery": "^3.6.0",
     "jszip": "^3.6.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "reflect-metadata": "^0.1.13",
     "webpack-merge": "^4.2.2",
     "xss": "^1.0.8"
